@@ -9,6 +9,8 @@
 \sectionauthor{Raymond D. Hettinger}{python@rcn.com}
 
 \versionadded{2.3}
+\deprecated{2.6}{ The built-in \code{set}/\code{frozneset} types replace this
+module.}
 
 The \module{sets} module provides classes for constructing and manipulating
 unordered collections of unique elements.  Common uses include membership
